this commit will remove typos on the index page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
             <a class="nav-link" href="services.html">Services</a>
           </li> -->
@@ -321,12 +321,12 @@
           <h3 class="mb-5">Experiences</h3>
 					<div class="experience-top">
             <h5>2019</h5>
-						<h4>Adminstration Assistance Trainee at Segera retreate</h4>
+						<h4>Adminstration Assistance Trainee at Segera retreat</h4>
 						<p class="my-3 text-white">Performed administrative duties as well as reporting directly to manager</p>
             </div>
             <div class="experience-top">
               <h5>2018</h5>
-              <h4>Intern at MInistry of Education</h4>
+              <h4>Intern at Ministry of Education</h4>
               <p class="my-3 text-white">Routing and switching configurations, setting up networks , interracting with vendors, attending seminers and trainings</p>
               </div>
 					</div>
@@ -334,7 +334,7 @@
             <h3 class="mb-5">Education</h3>
             <div class="experience-top">
               <h5>2020- now</h5>
-              <h4>Software Development course at MOringa school </h4>
+              <h4>Software Development course at Moringa school </h4>
               <p class="my-3 text-white">Gained skills in website design and software Development using different programing languages, teamwork collaborations as well as working with deadlines.</p>
               </div>
 
