--- a/contact.html
+++ b/contact.html
@@ -100,13 +100,13 @@
                                 <span class="fa fa-phone" aria-hidden="true"></span>
                            </div>
                             <div class="cont-add-rgt">
-                                 <a href="tel:+7-800-999-800">
+                                 <a href="tel:+254-792-63-9945">
                                     <p class="contact-text-sub">+254-792-63-9945</p>
                                  </a>
                             </div>
                         </div>
                         <div class="cont-add add-3">
-                            <div class="cont-add-lft">
+                            <div class="cont-add-lft";
                                 <span class="fa fa-file-pdf-o" aria-hidden="true"></span>
                            </div>
                             <div class="cont-add-rgt">
