added a project description

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </div>
 </div>
 <div class="col-lg-4  col-md-4 col-sm-6 skills-bar-grids mb-4 pb-2">
-    <h4>Angular</h4>
+    <h4>ReactJS</h4>
     <div class="progress">
     <div class="progress-bar progress-bar-striped bg-color" role="progressbar" style="width: 50% ;height:4px;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
   </div>
@@ -143,14 +143,14 @@
 
             <section id="content1" class="tab-content text-left">
                 <div class="d-grid grid-col-3">
-                    <div class="product">
-                        <a href="assets/PROJECTS/pitchworldapp.png" data-lightbox="example-set" 
-                            data-title="This is an application that allows users to add pitches and vote for other peoples piches as well as give a comment">
+                     <div class="product">
+                        <a href="assets/PROJECTS/Treasury simulator.PNG" data-lightbox="example-set" 
+                            data-title="This is an application that allows users to views the virtual bank accounts, make transfer of funds from one account to another, view logs of transations">
                             
                             <figure>
-                                <img src="assets/PROJECTS/pitchworldapp.png" class="img-responsive" alt="" />
+                                <img src="assets/PROJECTS/Treasury simulator.PNG" class="img-responsive" alt="" />
                             </figure>
-                            <a href="https://kaninipitches.herokuapp.com/">Visit site</a>
+                            <a href="https://flourishing-ganache-385df2.netlify.app/">Visit site</a>
                         </a>
                         
                     </div>
